# IndoorLocation

./: CMakeLists.txt  Main.qml  main.cpp
Functions/: circleintersection.cpp  circleintersection.h  findcoordinate.cpp  findcoordinate.h  pointcomparer.cpp  pointcomparer.h  trianglecenter.cpp  trianglecenter.h
